# katana

./: .gitattributes  .gitignore  NOTICE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: pages.yml  release.yml
landing/: package-lock.json  package.json  svelte.config.js  vite.config.ts
landing/scripts/: make-og-image.py
landing/src/: app.html
landing/src/lib/: IntroReveal.svelte
landing/src/routes/: +layout.svelte  +layout.ts  +page.svelte  base.css
landing/static/: CNAME  robots.txt  sitemap.xml
scripts/: fetch-ffmpeg.ps1  fetch-ffmpeg.sh  fetch-fonts.ps1  fetch-fonts.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  lib.rs  main.rs  project.rs  thumbnails.rs
src/lib/: constants.ts  index.ts
src/lib/components/: Button.svelte  ColorPicker.svelte  IconButton.svelte  Logo.svelte  Select.svelte  Slider.svelte  Tooltip.svelte
src/lib/components/editor/: AudioLayer.svelte  CommandPalette.svelte  CompositeLayer.svelte  ExportDialog.svelte  ExportProgress.svelte  PreviewPane.svelte  PropertiesPanel.svelte  TextLayer.svelte  Timeline.svelte  TopBar.svelte  TransportBar.svelte  (+1 more)
src/lib/design/: app.css  fonts.css  reset.css  theme.ts  tokens.css
src/lib/editor/: dragdrop.ts  export.ts  import.ts  intervals.ts  keyboard.ts  project.ts  store.svelte.ts  time.ts  waveform.ts  waveform.worker.ts
src/lib/icons/: Icon.svelte  paths.ts
src/lib/text/: fonts.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/styleguide/: +page.svelte
